@@ -1,3 +1,8 @@
+2004-11-02  Albert Chu <chu11@llnl.gov>
+
+	* freeipmi.spec.in: Various fixes for potential build issues.
+	Added THANKS file.
+	
 2004-10-29  Ian Zimmerman  <itz@californiadigital.com>
 
 	* libfreeipmi/src/ipmi-pef-cmds.c: More PEF commands added.
